# SPDX-FileCopyrightText: 2023 Roland Ebrecht <roland.ebrecht@infineon.com>
#
# SPDX-License-Identifier: MIT

[package]
name = "uni_arm_sim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elf = "0.7.3"
unicorn-engine = "2.0.1"
